# MWFonofoneModel

./: .gitignore  privacy-policy.html  settings.gradle
app/: build.gradle
app/libs/: mwengine-debug.aar  mwengine-release.aar
app/src/androidTest/java/com/scarette/mwfonofonemodel/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  fileio.cpp
app/src/main/cpp/libs/libsndfile/include/: sndfile.h
app/src/main/java/com/scarette/mwfonofonemodel/: EditableWaveformView.java  FileUtil.java  InfoDialog.java  InstallCallback.java  InstallCallbackInterface.java  MWEngineManager.java  MainActivity.java  PlaybackListener.java  Repository.java  SyncedRenderer.kt  TrackFragment.java  TracksViewModel.java
app/src/main/res/color/: text_color_statelist.xml
app/src/main/res/drawable/: ic_baseline_error_outline_24.xml  ic_launcher_foreground.xml  ic_mixer_24px.xml  ic_session_tab_play_24px.xml  ic_session_tab_play_active_composite_24px.xml  ic_session_tab_play_statelist_24px.xml  ic_tool_pique_44.xml  pique_24.xml  pique_on_24.xml  pique_statelist_24.xml
app/src/main/res/layout/: activity_main.xml  fragment_track.xml  info_dialog.xml  install_popup_window.xml  popup_window.xml
app/src/main/res/menu/: info_menu.xml
app/src/main/res/values/: attrs.xml  colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/scarette/mwfonofonemodel/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
waveform/: build.gradle
waveform/src/main/java/com/newventuresoftware/waveform/: WaveformView.java
waveform/src/main/res/values/: attrs_waveform_view.xml
